src/components/layout/layout.scss
/* ... */
noscript {
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
  padding-top: 0;
  margin-bottom: 1.45rem;
}
iframe {
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
  padding-top: 0;
  margin-bottom: 1.45rem;
}
hr {
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
  padding-top: 0;
  margin-bottom: calc(1.45rem - 1px);
  background: hsla(0, 0%, 0%, 0.2);
  border: none;
  height: 1px;
}
address {
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
  padding-top: 0;
  margin-bottom: 1.45rem;
}
b {
  font-weight: bold;
}
strong {
  font-weight: bold;
}
dt {
  font-weight: bold;
}
th {
  font-weight: bold;
}
li {
  margin-bottom: calc(1.45rem / 2);
}
ol li {
  padding-left: 0;
}
ul li {
  padding-left: 0;
}
li > ol {
  margin-left: 1.45rem;
  margin-bottom: calc(1.45rem / 2);
  margin-top: calc(1.45rem / 2);
}
li > ul {
  margin-left: 1.45rem;
  margin-bottom: calc(1.45rem / 2);
  margin-top: calc(1.45rem / 2);
}
blockquote *:last-child {
  margin-bottom: 0;
}
li *:last-child {
  margin-bottom: 0;
}
p *:last-child {
  margin-bottom: 0;
}
li > p {
  margin-bottom: calc(1.45rem / 2);
}
code {
  font-size: 0.85rem;
  line-height: 1.45rem;
}
kbd {
  font-size: 0.85rem;
  line-height: 1.45rem;
}
samp {
  font-size: 0.85rem;
  line-height: 1.45rem;
}
abbr {
  border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
  cursor: help;
}
acronym {
  border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
  cursor: help;
}
abbr[title] {
  border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
  cursor: help;
  text-decoration: none;
}
thead {
  text-align: left;
}
td,
th {
  text-align: left;
  border-bottom: 1px solid hsla(0, 0%, 0%, 0.12);
  font-feature-settings: "tnum";
  -moz-font-feature-settings: "tnum";
  -ms-font-feature-settings: "tnum";
  -webkit-font-feature-settings: "tnum";
  padding-left: 0.96667rem;
  padding-right: 0.96667rem;
  padding-top: 0.725rem;
  padding-bottom: calc(0.725rem - 1px);
}
th:first-child,
td:first-child {
  padding-left: 0;
}
th:last-child,
td:last-child {
  padding-right: 0;
}
tt,
code {
  background-color: hsla(0, 0%, 0%, 0.04);
  border-radius: 3px;
  font-family: "SFMono-Regular", Consolas, "Roboto Mono", "Droid Sans Mono",
    "Liberation Mono", Menlo, Courier, monospace;
  padding: 0;
  padding-top: 0.2em;
  padding-bottom: 0.2em;
}
pre code {
  background: none;
  line-height: 1.42;
}
code:before,
code:after,
tt:before,
tt:after {
  letter-spacing: -0.2em;
  content: " ";
}
pre code:before,
pre code:after,
pre tt:before,
pre tt:after {
  content: "";
}
@media only screen and (max-width: 480px) {
  html {
    font-size: 100%;
  }
}

/*******************/
/***Typography******/
/*******************/

h1 {
  color: #fff;
  font-family: "Poppins", sans-serif;
  font-size: 100px;

  @media screen and (max-width: 767px) {
    font-size: 50px;
  }
}

h2 {
  color: #fff;
  font-family: "Poppins", sans-serif;
  font-size: 100px;

  @media screen and (max-width: 767px) {
    font-size: 50px;
  }
}

h3 {
  font-size: 50px;
  color: #fff;
  font-family: "Poppins", sans-serif;

  @media screen and (max-width: 767px) {
    font-size: 24px;
  }
}

h4 {
  color: #fff;
  font-family: "Poppins", sans-serif;
  font-size: 35px;

  .large-h4 {
    font-size: 40px;
  }
}

h5 {
  color: #fff;
  font-family: "Poppins", sans-serif;
  font-size: 24px;
}

p,
a {
  font-family: "poppins", sans-serif;
}

li {
  font-family: "poppins", sans-serif;
  color: #fff;
}

.omit-list-style {
  list-style: none;
}

.mint-green {
  color: #3bb99b;
}

.white-text {
  color: #fff;
}

.regular {
  font-weight: 400;
}

.bold {
  font-weight: 700;
}

/*******************/
/******Nav Bar******/
/*******************/

.nav {
  display: flex;
  justify-content: space-between;
  padding: 10px 25px 5px;
  align-items: center;
  border-bottom: solid #3bb99b 2px;
  position: fixed;
  background: #282c34;
  z-index: 10;
  left: 0;
  right: 0;

  .logo {
    max-height: 100%;
    max-width: 75px;
    margin: 0;
  }

  .login-btn {
    color: #3bb99b;
    text-decoration: none;
    font-size: 16px;
    font-family: "Poppins", sans-serif;
    background: none;
    border: none;
    cursor: pointer;
  }

  .App-header .btn {
    background: transparent;
    border: none;
    color: white;
    font-family: Poppins;
    cursor: pointer;
  }

  .login-text {
    color: white;
    text-decoration: none;
  }

  .nav-links {
    max-width: 900px;
    width: 80%;
    display: flex;
    justify-content: flex-end;

    a {
      margin-left: 7%;
    }

    @media screen and (max-width: 1024px) {
      width: 90%;
    }

    @media screen and (max-width: 767px) {
      display: none;
    }
  }
}

/*******************/
/******General******/
/*******************/

html body {
  background: #282c34;
  margin-right: 0 !important;
}

footer {
  display: flex;
  justify-content: space-evenly;
  font-family: "Poppins", sans-serif;
  align-items: center;
  color: white;
  background: #3c3f58;
  position: relative;
  border-top: solid #3bb99b 2px;

  &.transparent {
    background: rgba(0, 0, 0, 0.3);
    z-index: 9;
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    @media screen and (max-width: 767px) {
      margin-top: 0;
    }
  }

  p {
    margin-bottom: 25px;
    margin-top: 25px;
    font-size: 14px;
    line-height: 16px;
    width: 225px;
    text-align: center;

    @media screen and (max-width: 767px) {
      margin-top: 10px;
      margin-bottom: 10px;
    }
  }

  a {
    color: white;
    text-decoration: none;
  }

  .manage-sub-btn {
    background: transparent;
    margin-top: 0;
    padding-bottom: 0;
  }

  @media screen and (max-width: 767px) {
    flex-direction: column;
    margin-top: 0px;
    &.transparent {
      position: relative;
    }
  }
}
/* ... */

